# xnlbd

./: .gitignore  README.md  contributors_and_credits.txt  pyproject.toml  release.sh
examples/: find_fixed_points.py  normal_forms_henon.py  plot_orbits.py  separatrix_2d.py
examples/example_data/: sps_100GeV_lhc_q26.json
examples/fixed_points/: 000_fixed_points_2d_sps_no_co_on_momentum.py  001_fixed_points_2d_sps_no_co_off_momentum.py  002_fixed_points_2d_sps_with_co_on_momentum.py  003_fixed_points_2d_henon_with_colour.py  004_fixed_points_4d_henon.py
examples/normal_forms/: 000_normal_forms_henon_quasires_nonres.py  001_normal_forms_sps_quasires.py
examples/orbit_visualisation/: 000_orbits_sps_all_planes_no_co.py  001_orbits_sps_all_planes_with_co.py  002_orbits_sps_transverse_no_rf_off_momentum.py
examples/separatrix_visualisation/: 000_separatrix_2d_henon_5th_order.py  001_separatrix_2d_sps_3rd_order.py
scripts/: lint.sh
tests/: test_4d_map_composition.py  test_fixed_point_finder.py  test_henonmap.py  test_map_composition_vs_madng.py  test_modulatedhenonmap.py  test_normal_forms.py  test_normalisation.py  test_normed_particles.py  test_polyelements.py  test_rdt.py
xnlbd/: __init__.py
xnlbd/analyse/: __init__.py
xnlbd/analyse/chaos/: __init__.py  displacement_tracker.py  gali.py  generic_writer.py  ghost_particle_manager.py  normed_particles.py  reverse_error_method.py  tools.py
xnlbd/tools/: __init__.py  generic_writer.py  normed_particles.py  series.py
xnlbd/track/: __init__.py  elements.py  modulations.py
xnlbd/visualise/: __init__.py
(+23 files in other folders)
